# kobe

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  demo.tape  install.ps1  rustfmt.toml
.github/workflows/: cd.yml  ci.yml  publish.yml  release.yml  rust-publish.yml  rust.yml
crates/: README.md
crates/kobe/: Cargo.toml
crates/kobe-aptos/: Cargo.toml
crates/kobe-aptos/src/: deriver.rs  error.rs  lib.rs
crates/kobe-btc/: Cargo.toml
crates/kobe-btc/src/: address.rs  deriver.rs  error.rs  lib.rs  network.rs  types.rs
crates/kobe-cli/: Cargo.toml
crates/kobe-cli/src/: main.rs  output.rs  qr.rs
crates/kobe-cli/src/commands/: aptos.rs  bitcoin.rs  cosmos.rs  ethereum.rs  filecoin.rs  mnemonic.rs  mod.rs  nostr.rs  simple.rs  solana.rs  spark.rs  sui.rs  ton.rs  tron.rs  xrpl.rs
crates/kobe-core/: Cargo.toml
crates/kobe-core/src/: bip32.rs  error.rs  slip10.rs  wallet.rs
crates/kobe-cosmos/: Cargo.toml
crates/kobe-cosmos/src/: deriver.rs  error.rs  lib.rs
crates/kobe-evm/: Cargo.toml
crates/kobe-evm/src/: deriver.rs  error.rs  lib.rs
crates/kobe-fil/: Cargo.toml
crates/kobe-fil/src/: deriver.rs  error.rs  lib.rs
crates/kobe-nostr/: Cargo.toml
crates/kobe-nostr/src/: deriver.rs  error.rs  lib.rs
crates/kobe-primitives/: Cargo.toml
crates/kobe-primitives/src/: bip32.rs  camouflage.rs  derive.rs  error.rs  lib.rs  mnemonic.rs  slip10.rs  style.rs  wallet.rs
crates/kobe-spark/: Cargo.toml
crates/kobe-spark/src/: deriver.rs  error.rs  lib.rs
crates/kobe-sui/: Cargo.toml
crates/kobe-sui/src/: deriver.rs  error.rs  lib.rs
crates/kobe-svm/: Cargo.toml
crates/kobe-svm/src/: derivation_style.rs  deriver.rs  error.rs  lib.rs
crates/kobe-ton/: Cargo.toml
crates/kobe-ton/src/: deriver.rs  error.rs  lib.rs
crates/kobe-tron/: Cargo.toml
crates/kobe-tron/src/: deriver.rs  error.rs  lib.rs
crates/kobe-xrpl/: Cargo.toml
crates/kobe-xrpl/src/: deriver.rs  error.rs  lib.rs
crates/kobe/src/: lib.rs
kobe/: Cargo.toml
kobe-btc/: Cargo.toml
kobe-btc/src/: address.rs  deriver.rs  error.rs  extended_key.rs  extended_public_key.rs  lib.rs  mnemonic.rs  network.rs  private_key.rs  privkey.rs  pubkey.rs  public_key.rs  standard_wallet.rs  transaction.rs  types.rs  wallet.rs  xpriv.rs  xpub.rs
kobe-cli/: Cargo.toml
kobe-cli/src/: main.rs  output.rs  qr.rs
kobe-cli/src/cmd/: bitcoin.rs  ethereum.rs  mnemonic.rs  mod.rs  solana.rs
kobe-cli/src/commands/: bitcoin.rs  cosmos.rs  ethereum.rs  filecoin.rs  mnemonic.rs  mod.rs  solana.rs  spark.rs  sui.rs  ton.rs  tron.rs
kobe-core/: Cargo.toml
kobe-core/src/: bip32.rs  camouflage.rs  error.rs  lib.rs  mnemonic.rs  slip10.rs  wallet.rs
kobe-cosmos/: Cargo.toml
kobe-cosmos/src/: deriver.rs  error.rs  lib.rs
kobe-eth/: Cargo.toml
kobe-eth/src/: address.rs  derivation_style.rs  deriver.rs  eip191.rs  error.rs  extended_key.rs  extended_public_key.rs  lib.rs  mnemonic.rs  private_key.rs  privkey.rs  pubkey.rs  public_key.rs  standard_wallet.rs  transaction.rs  utils.rs  wallet.rs  xpriv.rs  xpub.rs
kobe-evm/: Cargo.toml
kobe-evm/src/: address.rs  derivation_style.rs  deriver.rs  error.rs  lib.rs  standard_wallet.rs
kobe-fil/: Cargo.toml
kobe-fil/src/: deriver.rs  error.rs  lib.rs
kobe-sol/: Cargo.toml
kobe-sol/src/: derivation_style.rs  deriver.rs  error.rs  lib.rs  slip10.rs  standard_wallet.rs
kobe-spark/: Cargo.toml
kobe-spark/src/: deriver.rs  error.rs  lib.rs
kobe-sui/: Cargo.toml
kobe-sui/src/: deriver.rs  error.rs  lib.rs  slip10.rs
kobe-svm/: Cargo.toml
kobe-svm/src/: derivation_style.rs  deriver.rs  error.rs  lib.rs  slip10.rs  standard_wallet.rs
kobe-ton/: Cargo.toml
kobe-ton/src/: deriver.rs  error.rs  lib.rs  slip10.rs
kobe-tron/: Cargo.toml
kobe-tron/src/: deriver.rs  error.rs  lib.rs
kobe-xmr/: Cargo.toml
kobe-xmr/src/: lib.rs
kobe-zec/: Cargo.toml
kobe-zec/src/: lib.rs
kobe/src/: amount.rs  camouflage.rs  derive.rs  encoding.rs  error.rs  hash.rs  hdpath.rs  lib.rs  main.rs  mnemonic.rs  traits.rs  transaction.rs  types.rs  wallet.rs
kobe/src/commands/: bitcoin.rs  ethereum.rs  mod.rs  solana.rs
kobe/src/wordlist/: mod.rs  monero.rs
skills/kobe/: SKILL.md
skills/kobe-cli/: SKILL.md
