[workspace]
members = ["kobe", "kobe-btc", "kobe-eth", "kobe-sol","kobe-cli"]
default-members = ["kobe"]
resolver = "3"

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pyroth/kobe"

[workspace.dependencies]
kobe = { version = "0.3.1", path = "./kobe", default-features = false }
kobe-btc = { version = "0.3.1", path = "./kobe-btc", default-features = false }
kobe-eth = { version = "0.3.1", path = "./kobe-eth", default-features = false }
kobe-sol = { version = "0.3.1", path = "./kobe-sol", default-features = false }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"

# Crypto dependencies (no default-features for no_std support)
alloy-primitives = { version = "1.5", default-features = false, features = ["k256"] }
bitcoin = { version = "0.32", default-features = false }
bip39 = { version = "2.1", default-features = false }
bip32 = { version = "0.5", default-features = false, features = ["secp256k1", "alloc"] }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.2", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
getrandom = { version = "0.3", default-features = false }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2

[profile.ci]
inherits = "dev"
debug = false

[profile.bench]
inherits = "release"
debug = true

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
elided_lifetimes_in_paths = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
clone_on_ref_ptr = "warn"        
exhaustive_enums = "warn"        
exhaustive_structs = "warn"      
missing_docs_in_private_items = "warn"  
unwrap_in_result = "warn"        
shadow_reuse = "warn"            
shadow_same = "warn"
shadow_unrelated = "warn"
missing_errors_doc = "allow"       
missing_panics_doc = "allow"       
module_name_repetitions = "allow"  
must_use_candidate = "allow"       
doc_markdown = "allow"             
similar_names = "allow"            
too_many_lines = "allow"           
struct_excessive_bools = "allow"   
fn_params_excessive_bools = "allow"
implicit_hasher = "allow"          
option_if_let_else = "allow"       
significant_drop_tightening = "allow"
multiple_crate_versions = "allow"
future_not_send = "allow"
