[workspace]
members = ["kobe", "kobe-btc", "kobe-eth", "kobe-sol","kobe-cli"]
default-members = ["kobe"]
resolver = "3"

[workspace.package]
version = "0.4.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pyroth/kobe"

[workspace.dependencies]
kobe = { version = "0.4.2", path = "./kobe", default-features = false }
kobe-btc = { version = "0.4.2", path = "./kobe-btc", default-features = false }
kobe-eth = { version = "0.4.2", path = "./kobe-eth", default-features = false }
kobe-sol = { version = "0.4.2", path = "./kobe-sol", default-features = false }

alloy-primitives = { version = "1.5", default-features = false, features = ["k256"] }
bip32 = { version = "0.5", default-features = false, features = ["secp256k1", "alloc"] }
bip39 = { version = "2.1", default-features = false }
bitcoin = { version = "0.32", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
colored = { version = "3.0" }
ed25519-dalek = { version = "2.2", default-features = false }
hex = { version = "0.4", default-features = false }
hmac = { version = "0.12", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
qrcode = { version = "0.14"}
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10", default-features = false }
zeroize = { version = "1.7", default-features = false, features = ["derive"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 2

[profile.ci]
debug = false
inherits = "dev"

[profile.bench]
debug = true
inherits = "release"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "warn"
doc_markdown = "allow"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
expect_used = "warn"
fn_params_excessive_bools = "allow"
future_not_send = "allow"
implicit_hasher = "allow"
missing_docs_in_private_items = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
significant_drop_tightening = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
todo = "warn"
too_many_lines = "allow"
unimplemented = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
