[workspace]
members = ["crates/*"]
default-members = ["crates/kobe"]
resolver = "3"

[workspace.package]
version = "0.7.6"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/qntx/kobe"
description = "Multi-chain HD wallet derivation library"
keywords = ["crypto", "wallet", "bitcoin", "ethereum", "solana"]
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
kobe-primitives = { version = "0.7", path = "crates/kobe-primitives", default-features = false }
kobe = { version = "0.7", path = "crates/kobe", default-features = false }
kobe-btc = { version = "0.7", path = "crates/kobe-btc", default-features = false }
kobe-cosmos = { version = "0.7", path = "crates/kobe-cosmos", default-features = false }
kobe-evm = { version = "0.7", path = "crates/kobe-evm", default-features = false }
kobe-fil = { version = "0.7", path = "crates/kobe-fil", default-features = false }
kobe-spark = { version = "0.7", path = "crates/kobe-spark", default-features = false }
kobe-sui = { version = "0.7", path = "crates/kobe-sui", default-features = false }
kobe-svm = { version = "0.7", path = "crates/kobe-svm", default-features = false }
kobe-ton = { version = "0.7", path = "crates/kobe-ton", default-features = false }
kobe-tron = { version = "0.7", path = "crates/kobe-tron", default-features = false }
kobe-xrpl = { version = "0.7", path = "crates/kobe-xrpl", default-features = false }

alloy-primitives = { version = "1.5.7", default-features = false, features = ["k256"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bech32 = { version = "0.11.1", default-features = false, features = ["alloc"] }
bip32 = { version = "0.5.3", default-features = false, features = ["secp256k1", "alloc"] }
bip39 = { version = "2.2.2", default-features = false }
bitcoin = { version = "0.32.8", default-features = false }
blake2 = { version = "0.10", default-features = false }
bs58 = { version = "0.5.1", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.2.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
hmac = { version = "0.12.0", default-features = false }
k256 = { version = "0.13.4", default-features = false, features = ["ecdsa"] }
pbkdf2 = { version = "0.12.2", default-features = false }
ripemd = { version = "0.2.0", default-features = false }
sha2 = { version = "0.10.0", default-features = false }
sha3 = { version = "0.10", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
zeroize = { version = "1.8.2", default-features = false, features = ["derive"] }

clap = { version = "4", features = ["derive"] }
colored = "3"
qrcode = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.test]
opt-level = 2

[profile.ci]
debug = false
inherits = "dev"

[profile.bench]
debug = true
inherits = "release"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
clone_on_ref_ptr = "warn"
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "warn"
doc_markdown = "allow"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
expect_used = "warn"
fn_params_excessive_bools = "allow"
future_not_send = "allow"
implicit_hasher = "allow"
missing_docs_in_private_items = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
panic = "warn"
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
print_stderr = "warn"
print_stdout = "warn"
shadow_reuse = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
significant_drop_tightening = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
todo = "warn"
too_many_lines = "allow"
unimplemented = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
