[package]
name = "kobe-btc"
version.workspace = true
edition.workspace = true
description = "Bitcoin wallet utilities for Kobe CLI"
license.workspace = true
repository.workspace = true
keywords = ["bitcoin", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe/std", "bitcoin/std", "bip39/std", "hex/std", "zeroize/std"]
alloc = ["kobe/alloc", "bip39/alloc", "hex/alloc", "zeroize/alloc"]
rand = ["std", "bitcoin/rand-std"]

[dependencies]
kobe.workspace = true
bitcoin.workspace = true
bip39.workspace = true
hex.workspace = true
zeroize.workspace = true

[lints]
workspace = true
