[package]
name = "kobe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "A multi-chain cryptocurrency wallet CLI tool"
keywords = ["crypto", "wallet", "bitcoin", "ethereum", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "kobe"
path = "src/main.rs"

[dependencies]
kobe = { workspace = true, features = ["std", "rand", "camouflage"] }
kobe-btc = { workspace = true, features = ["std", "rand"] }
kobe-evm = { workspace = true, features = ["std", "rand"] }
kobe-svm = { workspace = true, features = ["std", "rand"] }
clap.workspace = true
colored.workspace = true
hex.workspace = true
zeroize.workspace = true
qrcode.workspace = true

[lints]
workspace = true
