[package]
name = "kobe-core"
version = "0.2.4"
edition = "2024"
description = "Core wallet types for Kobe multi-chain wallet CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pyor/kobe"
keywords = ["crypto", "wallet", "bip39", "mnemonic", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "bip39/std", "zeroize/std"]
alloc = ["bip39/alloc", "zeroize/alloc"]
# Enable random mnemonic generation (requires std or custom RNG)
rand = ["bip39/rand"]

[dependencies]
bip39.workspace = true
zeroize.workspace = true
