[package]
name = "kobe-eth"
version = "0.1.0"
edition = "2024"
description = "Ethereum wallet support for the Kobe wallet library"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/kobe-eth"
repository = "https://github.com/pyroth/kobe"
homepage = "https://github.com/pyroth/kobe"
keywords = ["ethereum", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe/std", "k256/std", "sha3/std", "bip39/std", "bip32/std", "alloy-primitives/std"]
alloc = ["kobe/alloc", "k256/alloc", "bip39/alloc", "bip32/alloc"]

[dependencies]
alloy-primitives.workspace = true
kobe.workspace = true
k256.workspace = true
bip32.workspace = true
bip39.workspace = true
hmac.workspace = true
rand_core.workspace = true
sha2.workspace = true
sha3.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
rand.workspace = true
