[package]
name = "kobe-eth"
version = "0.1.0"
edition = "2024"
description = "Ethereum wallet utilities for Kobe CLI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pyor/kobe"
keywords = ["ethereum", "wallet", "crypto"]

[dependencies]
kobe-core.workspace = true
alloy-primitives.workspace = true
bip39.workspace = true
k256.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
zeroize.workspace = true
