[package]
name = "kobe-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Ethereum wallet for Kobe"
keywords = ["ethereum", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe/std", "k256/std", "hex/std", "zeroize/std"]
alloc = ["kobe/alloc", "hex/alloc", "zeroize/alloc"]
# Enable random key generation for StandardWallet (requires std)
rand = ["std"]

[dependencies]
kobe.workspace = true
alloy-primitives.workspace = true
bip32.workspace = true
k256.workspace = true
hex.workspace = true
zeroize.workspace = true

[lints]
workspace = true
