[package]
name = "kobe-fil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Filecoin wallet for Kobe"
keywords = ["filecoin", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe/std", "k256/std", "hex/std", "zeroize/std"]
alloc = ["kobe/alloc", "hex/alloc", "zeroize/alloc"]

[dependencies]
kobe.workspace = true
bip32.workspace = true
k256.workspace = true
hex.workspace = true
thiserror.workspace = true
zeroize.workspace = true
blake2.workspace = true

[lints]
workspace = true
