[package]
name = "kobe-sol"
version.workspace = true
edition.workspace = true
description = "Solana wallet utilities for Kobe CLI"
license.workspace = true
repository.workspace = true
keywords = ["solana", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-core/std", "ed25519-dalek/std", "hex/std", "zeroize/std"]
alloc = ["kobe-core/alloc", "hex/alloc", "zeroize/alloc"]
# Enable random key generation for StandardWallet
rand = ["dep:getrandom"]

[dependencies]
kobe-core.workspace = true
getrandom = { workspace = true, optional = true }
ed25519-dalek.workspace = true
bs58.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize.workspace = true

[lints]
workspace = true
