[package]
name = "kobe-spark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Spark (Bitcoin L2) wallet for Kobe"
keywords = ["spark", "bitcoin", "wallet", "crypto"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe/std", "zeroize/std"]
alloc = ["kobe/alloc", "zeroize/alloc"]

[dependencies]
kobe = { workspace = true, features = ["bip32"] }
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
