[package]
name = "kobe-sui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Sui wallet for Kobe (planned)"
keywords = ["sui", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[dependencies]

[lints]
workspace = true
