[package]
name = "kobe-svm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Solana wallet for Kobe"
keywords = ["solana", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe/std", "ed25519-dalek/std", "hex/std", "zeroize/std"]
alloc = ["kobe/alloc", "hex/alloc", "zeroize/alloc"]
rand = ["ed25519-dalek/rand_core", "dep:rand_core"]

[dependencies]
kobe.workspace = true
ed25519-dalek.workspace = true
rand_core = { workspace = true, optional = true }
bs58.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
zeroize.workspace = true

[lints]
workspace = true
