[package]
name = "kobe-tron"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Tron wallet for Kobe"
keywords = ["tron", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe/std", "k256/std", "hex/std", "zeroize/std"]
alloc = ["kobe/alloc", "hex/alloc", "zeroize/alloc"]

[dependencies]
kobe.workspace = true
bip32.workspace = true
k256.workspace = true
hex.workspace = true
thiserror.workspace = true
zeroize.workspace = true
sha3.workspace = true
bs58 = { workspace = true, features = ["check"] }

[lints]
workspace = true
