[package]
name = "kobe-xmr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Monero wallet for Kobe (planned)"
keywords = ["monero", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[dependencies]

[lints]
workspace = true
