[package]
name = "kobe-zec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Zcash wallet for Kobe (planned)"
keywords = ["zcash", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[dependencies]

[lints]
workspace = true
