[package]
name = "kobe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Core bip39 wallet for Kobe multi-chain wallet"
keywords = ["crypto", "wallet", "bip39", "mnemonic", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "bip39/std", "zeroize/std"]
alloc = ["bip39/alloc", "zeroize/alloc"]
# Enable random mnemonic generation (requires std or custom RNG)
rand = ["bip39/rand"]
# Enable custom RNG support for no_std environments
rand_core = ["bip39/rand_core"]

[dependencies]
bip39.workspace = true
zeroize.workspace = true

[lints]
workspace = true
