[package]
name = "kobe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Multi-chain HD wallet derivation library"
keywords = ["crypto", "wallet", "bip39", "mnemonic", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "bip39/std", "zeroize/std"]
alloc = ["bip39/alloc", "zeroize/alloc"]
rand = ["bip39/rand"]
rand_core = ["bip39/rand_core"]
camouflage = ["dep:hmac", "dep:pbkdf2", "dep:sha2", "alloc"]

[dependencies]
bip39.workspace = true
hmac = { workspace = true, optional = true }
pbkdf2 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
