[package]
name = "kobe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "Multi-chain HD wallet derivation — umbrella crate"
keywords = ["crypto", "wallet", "bitcoin", "ethereum", "solana"]
categories = ["cryptography::cryptocurrencies"]

[features]
default = ["std", "btc", "evm", "svm"]
std = ["kobe-core/std"]
alloc = ["kobe-core/alloc"]
rand = ["kobe-core/rand"]
rand_core = ["kobe-core/rand_core"]
camouflage = ["kobe-core/camouflage"]
slip10 = ["kobe-core/slip10"]
bip32 = ["kobe-core/bip32"]

btc = ["dep:kobe-btc"]
evm = ["dep:kobe-evm"]
svm = ["dep:kobe-svm"]
cosmos = ["dep:kobe-cosmos"]
tron = ["dep:kobe-tron"]
spark = ["dep:kobe-spark"]
fil = ["dep:kobe-fil"]
ton = ["dep:kobe-ton"]
sui = ["dep:kobe-sui"]
all-chains = ["btc", "evm", "svm", "cosmos", "tron", "spark", "fil", "ton", "sui"]

[dependencies]
kobe-core = { workspace = true, features = ["alloc"] }
kobe-btc = { workspace = true, features = ["std"], optional = true }
kobe-evm = { workspace = true, features = ["std"], optional = true }
kobe-svm = { workspace = true, features = ["std"], optional = true }
kobe-cosmos = { workspace = true, features = ["std"], optional = true }
kobe-tron = { workspace = true, features = ["std"], optional = true }
kobe-spark = { workspace = true, features = ["std"], optional = true }
kobe-fil = { workspace = true, features = ["std"], optional = true }
kobe-ton = { workspace = true, features = ["std"], optional = true }
kobe-sui = { workspace = true, features = ["std"], optional = true }

[lints]
workspace = true
