[package]
name = "kobe-aptos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Aptos wallet for Kobe"
keywords = ["aptos", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std", "hex/std", "zeroize/std"]
alloc = ["kobe-primitives/alloc", "hex/alloc", "zeroize/alloc"]

[dependencies]
kobe-primitives = { workspace = true, features = ["slip10"] }
hex.workspace = true
sha3.workspace = true
zeroize.workspace = true

[lints]
workspace = true
