[package]
name = "kobe-btc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Bitcoin HD wallet derivation for Kobe"
keywords = ["bitcoin", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std", "bitcoin/std", "zeroize/std"]
alloc = ["kobe-primitives/alloc", "zeroize/alloc"]

[dependencies]
kobe-primitives.workspace = true
bitcoin.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
hex.workspace = true

[lints]
workspace = true
