[package]
name = "kobe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "A multi-chain cryptocurrency wallet CLI tool"
keywords = ["crypto", "wallet", "bitcoin", "ethereum", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "kobe"
path = "src/main.rs"

[dependencies]
kobe = { workspace = true, features = ["std", "rand", "camouflage", "all-chains"] }
clap.workspace = true
colored.workspace = true
zeroize.workspace = true
qrcode.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
