[package]
name = "kobe-cosmos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Cosmos wallet for Kobe"
keywords = ["cosmos", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-core/std", "zeroize/std"]
alloc = ["kobe-core/alloc", "zeroize/alloc"]

[dependencies]
kobe-core = { workspace = true, features = ["bip32"] }
thiserror.workspace = true
zeroize.workspace = true
ripemd.workspace = true
sha2.workspace = true
bech32.workspace = true

[lints]
workspace = true
