[package]
name = "kobe-cosmos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Cosmos wallet for Kobe"
keywords = ["cosmos", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std"]
alloc = ["kobe-primitives/alloc"]

[dependencies]
kobe-primitives = { workspace = true, features = ["bip32"] }
thiserror.workspace = true
ripemd.workspace = true
sha2.workspace = true
bech32.workspace = true

[lints]
workspace = true
