[package]
name = "kobe-evm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Ethereum HD wallet derivation for Kobe"
keywords = ["ethereum", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std", "zeroize/std"]
alloc = ["kobe-primitives/alloc", "zeroize/alloc"]

[dependencies]
kobe-primitives = { workspace = true, features = ["bip32"] }
alloy-primitives.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
