[package]
name = "kobe-fil"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Filecoin wallet for Kobe"
keywords = ["filecoin", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std"]
alloc = ["kobe-primitives/alloc"]

[dependencies]
kobe-primitives = { workspace = true, features = ["bip32"] }
thiserror.workspace = true
blake2.workspace = true

[lints]
workspace = true
