[package]
name = "kobe-nostr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Nostr wallet for Kobe"
keywords = ["nostr", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std", "zeroize/std"]
alloc = ["kobe-primitives/alloc", "zeroize/alloc"]

[dependencies]
kobe-primitives = { workspace = true, features = ["bip32"] }
bech32.workspace = true
zeroize.workspace = true

[lints]
workspace = true
