[package]
name = "kobe-primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Multi-chain HD wallet derivation library"
keywords = ["crypto", "wallet", "bip39", "mnemonic", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "bip39/std", "zeroize/std"]
alloc = ["bip39/alloc", "zeroize/alloc", "dep:hex"]
rand = ["bip39/rand"]
rand_core = ["bip39/rand_core"]
camouflage = ["dep:hmac", "dep:sha2", "alloc"]
slip10 = ["dep:ed25519-dalek", "dep:hmac", "dep:sha2", "alloc"]
bip32 = ["dep:bip32-crate", "dep:k256", "alloc"]

[dependencies]
bip39.workspace = true
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
bip32-crate = { package = "bip32", version = "0.5.3", default-features = false, features = ["secp256k1", "alloc"], optional = true }
k256 = { workspace = true, optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"], optional = true }
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
