[package]
name = "kobe-spark"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Spark (Bitcoin L2) wallet for Kobe"
keywords = ["spark", "bitcoin", "wallet", "crypto"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std"]
alloc = ["kobe-primitives/alloc"]

[dependencies]
kobe-primitives = { workspace = true, features = ["bip32"] }

[lints]
workspace = true
