[package]
name = "kobe-sui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Sui wallet for Kobe"
keywords = ["sui", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std", "ed25519-dalek/std", "hex/std", "zeroize/std"]
alloc = ["kobe-primitives/alloc", "hex/alloc", "zeroize/alloc"]

[dependencies]
kobe-primitives = { workspace = true, features = ["slip10"] }
ed25519-dalek.workspace = true
hex.workspace = true
thiserror.workspace = true
zeroize.workspace = true
blake2.workspace = true

[lints]
workspace = true
