[package]
name = "kobe-svm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Solana HD wallet derivation for Kobe"
keywords = ["solana", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std", "zeroize/std"]
alloc = ["kobe-primitives/alloc", "zeroize/alloc"]

[dependencies]
kobe-primitives = { workspace = true, features = ["slip10"] }
bs58.workspace = true
zeroize.workspace = true

[lints]
workspace = true
