[package]
name = "kobe-ton"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "TON wallet for Kobe"
keywords = ["ton", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-core/std", "ed25519-dalek/std", "hex/std", "zeroize/std"]
alloc = ["kobe-core/alloc", "hex/alloc", "zeroize/alloc"]

[dependencies]
kobe-core = { workspace = true, features = ["slip10"] }
ed25519-dalek.workspace = true
hex.workspace = true
thiserror.workspace = true
zeroize.workspace = true
sha2.workspace = true
base64.workspace = true

[lints]
workspace = true
