[package]
name = "kobe-tron"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Tron wallet for Kobe"
keywords = ["tron", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std", "zeroize/std"]
alloc = ["kobe-primitives/alloc", "zeroize/alloc"]

[dependencies]
kobe-primitives = { workspace = true, features = ["bip32"] }
thiserror.workspace = true
zeroize.workspace = true
sha3.workspace = true
bs58 = { workspace = true, features = ["check"] }

[lints]
workspace = true
