[package]
name = "kobe-xrpl"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "XRP Ledger wallet for Kobe"
keywords = ["xrpl", "ripple", "wallet", "crypto", "no_std"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["alloc", "kobe-primitives/std"]
alloc = ["kobe-primitives/alloc"]

[dependencies]
kobe-primitives = { workspace = true, features = ["bip32"] }
bs58.workspace = true
ripemd.workspace = true
sha2.workspace = true

[lints]
workspace = true
